--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "nodemon": "^2.0.4",
     "npm-check-updates": "^7.0.2",
-    "pino-pretty": "^4.1.0"
+    "pino-pretty": "^4.1.0",
+    "prettier": "2.0.5"
   },
   "nodemonConfig": {
     "ext": "js",
