Add multipart support

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "fastify-autoload": "^3.0.6",
     "fastify-compress": "^3.2.2",
     "fastify-cors": "^4.1.0",
-    "fastify-helmet": "^4.0.2",
-    "fastify-plugin": "^2.0.3",
+    "fastify-helmet": "^5.0.0",
+    "fastify-multipart": "^2.0.3",
+    "fastify-plugin": "^2.1.1",
     "fastify-rate-limit": "^4.0.2",
     "fastify-request-context": "^1.0.2",
     "fastify-sensible": "^3.0.1",
