--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastify-box",
-  "description": "Fastify app template",
+  "description": "Web application template based on fastify, with customized extensions supported by the community.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -9,29 +9,37 @@
     "update": "ncu -u && npm i"
   },
   "keywords": [
+    "fastify-box",
     "framework",
     "template",
     "fastify",
+    "box",
     "web"
   ],
-  "author": "Dmitrii Shchipunov",
+  "author": "goodvir",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/goodvir/fastify-box.git"
+    "url": "git+https://github.com/goodvir/fastify-box.git"
+  },
+  "bugs": {
+    "url": "https://github.com/goodvir/fastify-box/issues"
   },
   "homepage": "https://github.com/goodvir/fastify-box.git",
+  "engines": {
+    "node": ">=10"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
-    "fastify": "^3.1.1",
+    "fastify": "^3.2.0",
     "fastify-accepts": "^2.0.1",
     "fastify-autoload": "^3.0.6",
-    "fastify-compress": "^3.2.2",
+    "fastify-compress": "^3.3.0",
     "fastify-cors": "^4.1.0",
     "fastify-helmet": "^5.0.0",
     "fastify-multipart": "^2.0.3",
-    "fastify-plugin": "^2.1.1",
+    "fastify-plugin": "^2.2.0",
     "fastify-rate-limit": "^4.0.2",
     "fastify-request-context": "^1.0.2",
     "fastify-sensible": "^3.0.1",
@@ -43,7 +51,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
-    "npm-check-updates": "^7.0.2",
+    "npm-check-updates": "^7.0.3",
     "pino-pretty": "^4.1.0",
     "prettier": "2.0.5"
   },
