--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "update": "ncu -u && npm i"
+    "buildDocker": "docker build -t fastify-box",
+    "runDocker": "docker run --name fastify-box -d -p 8080:3000 --rm fastify-box",
+    "updatePackages": "ncu -u && npm i"
   },
   "keywords": [
     "fastify-box",
@@ -34,8 +35,8 @@
     "ejs": "^3.1.5",
     "fastify": "^3.4.1",
     "fastify-accepts": "^2.0.1",
-    "fastify-autoload": "^3.1.0",
-    "fastify-compress": "^3.3.0",
+    "fastify-autoload": "^3.2.0",
+    "fastify-compress": "^3.3.1",
     "fastify-cors": "^4.1.0",
     "fastify-helmet": "^5.0.3",
     "fastify-multipart": "^3.2.0",
@@ -47,11 +48,11 @@
     "html-minifier": "^4.0.0",
     "hyperid": "^2.0.5",
     "make-promises-safe": "^5.1.0",
-    "point-of-view": "^4.5.1"
+    "point-of-view": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
-    "npm-check-updates": "^9.0.1",
+    "npm-check-updates": "^9.0.3",
     "pino-pretty": "^4.2.1",
     "prettier": "2.1.2"
   },
