--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "pushTags": "git push --tags",
     "buildDocker": "docker build -t fastify-box",
     "runDocker": "docker run --name fastify-box -d -p 8080:3000 --rm fastify-box",
     "updatePackages": "ncu -u && npm i"
@@ -33,27 +34,27 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "fastify": "^3.5.1",
+    "fastify": "^3.7.0",
     "fastify-accepts": "^2.0.1",
     "fastify-autoload": "^3.3.0",
     "fastify-compress": "^3.3.1",
     "fastify-cors": "^4.1.0",
     "fastify-helmet": "^5.0.3",
-    "fastify-multipart": "^3.2.0",
-    "fastify-plugin": "^2.3.4",
-    "fastify-rate-limit": "^4.0.2",
+    "fastify-multipart": "^3.3.0",
+    "fastify-plugin": "^3.0.0",
+    "fastify-rate-limit": "^4.0.3",
     "fastify-request-context": "^2.1.1",
     "fastify-sensible": "^3.0.1",
-    "fastify-static": "^3.2.1",
+    "fastify-static": "^3.3.0",
     "html-minifier": "^4.0.0",
     "hyperid": "^2.0.5",
     "make-promises-safe": "^5.1.0",
     "point-of-view": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "npm-check-updates": "^9.0.3",
-    "pino-pretty": "^4.2.1",
+    "nodemon": "^2.0.6",
+    "npm-check-updates": "^9.2.3",
+    "pino-pretty": "^4.3.0",
     "prettier": "2.1.2"
   },
   "nodemonConfig": {
