--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "fastify-box",
   "description": "Web application template based on fastify, with customized extensions supported by the community.",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "tap --reporter=list --test-env=NODE_ENV=test",
     "pushTags": "git push --tags",
     "buildDocker": "docker build -t fastify-box",
-    "runDocker": "docker run --name fastify-box -d -p 8080:3000 --rm fastify-box",
+    "runDocker": "docker run --name fastify-box -d -p 8080:8080 --rm fastify-box",
     "updatePackages": "ncu -u && npm i"
   },
   "keywords": [
@@ -34,10 +35,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "fastify": "^3.7.0",
+    "fastify": "^3.8.0",
     "fastify-accepts": "^2.0.1",
-    "fastify-autoload": "^3.3.0",
-    "fastify-compress": "^3.3.1",
+    "fastify-autoload": "^3.3.1",
+    "fastify-compress": "^3.4.0",
     "fastify-cors": "^4.1.0",
     "fastify-helmet": "^5.0.3",
     "fastify-multipart": "^3.3.0",
@@ -53,9 +54,10 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
-    "npm-check-updates": "^9.2.3",
+    "npm-check-updates": "^10.2.1",
     "pino-pretty": "^4.3.0",
-    "prettier": "2.1.2"
+    "prettier": "2.2.0",
+    "tap": "^14.11.0"
   },
   "nodemonConfig": {
     "ext": "js",
@@ -63,6 +65,7 @@
       "core",
       "app.js",
       "config.js",
+      "server.js",
       ".env"
     ]
   }
